Fix border-radius for code examples on mobile

--- a/src/includes/postcss/_prism-duotone-dark.css
+++ b/src/includes/postcss/_prism-duotone-dark.css
@@ -32,7 +32,12 @@ pre[class*='language-'] {
   padding: 1em;
   margin: 0.5em 0;
   overflow: auto;
-  border-radius: 0.3em;
+}
+
+@media (min-width: 790px) {
+  pre[class*='language-'] {
+    border-radius: 0.3em;
+  }
 }
 
 :not(pre) > code[class*='language-'],
